<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello,This is AdViewSample!</string>
    <string name="app_name">AdView Demo</string>
    <string name="codelayout">代码布局方式</string>
    <string name="codelayout2">纯代码方式</string>
    <string name="xmllayout">XML布局方式</string>
    <string name="customlayout">自定义广告平台</string>
    <string name="bannerlayout">横幅广告</string>
    <string name="instllayout">全/插屏广告</string>
    <string name="version">—————— v3.2.2 ——————</string>
    <string name="content">更新日志</string>
    <string name="ok">确定</string>
    <string name="btn_name">请求插屏广告</string>
    <string name="btn_help">当前版本号：V3.2.2</string>
    <string name="btn_showinstal">显示插屏广告</string>
    <string name="btn_requesshow">请求并显示</string>
    <string name="release">更新时间：2015-11-26\n
							1.添加光音1.2.2\n
							2.更新Smaato至5.0.0\n
							3.更新百度至3.0\n
							4.更新京东至1.1\n
							5.更新广点通至4.8.512\n
							6.更新卓易至1.2\n
							7.更新AdMob至8.3.0</string>

</resources>