<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <ImageView
             android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
        	 android:gravity="center_horizontal"
        	 android:layout_marginLeft="50dp"
        	 android:layout_marginRight="50dp"
        	 android:layout_marginTop="30dp"
        	 android:orientation="vertical"
        	 android:scaleType="fitCenter"
        	 android:src="@drawable/logo"/>
        
        <TextView 
             android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
        	 android:gravity="center_horizontal"
        	 android:orientation="vertical"
        	 android:text="@string/version"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:gravity="center_horizontal|bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
        <Button
            android:id="@+id/banner"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/bannerlayout"
        	android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp"
        	android:layout_marginBottom="20dp"
        	android:layout_marginTop="20dp"
        	android:textColor="@color/font"
        	android:background="@color/red"/>
        
        <Button
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp"
        	android:layout_marginBottom="20dp"
        	android:text="@string/instllayout"
        	android:textColor="@color/font"
        	android:background="@color/blue"
            android:id="@+id/instl"/> 
        
        <Button
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp"
        	android:layout_marginBottom="50dp"
        	android:text="@string/content"
        	android:textColor="@color/font"
        	android:background="@color/yellow"
            android:id="@+id/release"/>
        
    </LinearLayout>

</LinearLayout>